[package]
name = "hello-trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]

axum = "0.7.4"
opentelemetry = "0.21.0"
opentelemetry-http = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["trace", "util", "set-header"] }
tracing = "0.1"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3.0", features = ["json", "env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
url = { version = "2.4.1", features = ["serde"] }
opentelemetry_sdk = "0.21.2"
opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
axum-tracing-opentelemetry = "0.16.0"
